fix: 폰트 추가 및 버그 수정

--- a/Bappuli/Info.plist
+++ b/Bappuli/Info.plist
@@ -11,5 +11,9 @@
     <array>
         <string>audio</string>
     </array>
+    <key>UIAppFonts</key>
+    <array>
+        <string>OwnglyphMeetme.ttf</string>
+    </array>
 </dict>
 </plist>
